--- a/demos/pattern1/bgdk-app.yaml
+++ b/demos/pattern1/bgdk-app.yaml
@@ -2,16 +2,16 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: bgdk-app
-  namespace: argocd
 spec:
   destination:
-    namespace: bgdk
-    server: https://kubernetes.default.svc
-  project: default
+    name: ''
+    namespace: 'bgdk'
+    server: 'https://kubernetes.default.svc'
   source:
     path: apps/pattern1/bgd/overlays/bgdk
-    repoURL: https://github.com/rcarrata/kcd23ams-gitops-patterns
-    targetRevision: main
+    repoURL: 'https://github.com/saurav116/GitOps-Patterns.git'
+    targetRevision: HEAD
+  project: default
   syncPolicy:
     automated:
       prune: true
