--- a/demos/pattern2/todo-application.yaml
+++ b/demos/pattern2/todo-application.yaml
@@ -2,10 +2,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: todo-app
-  namespace: argocd
 spec:
   destination:
-    namespace: todo
+    namespace: 'todo'
     server: https://kubernetes.default.svc
   project: default
   source:
