--- a/demos/pattern3/argo-apps/dev-environment.yaml
+++ b/demos/pattern3/argo-apps/dev-environment.yaml
@@ -10,8 +10,8 @@ spec:
   project: dev-env-project
   source:
     path: demos/pattern3/components/
-    repoURL: https://github.com/rcarrata/kcd23ams-gitops-patterns
-    targetRevision: main
+    repoURL: https://github.com/saurav116/GitOps-Patterns
+    targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
