--- a/demos/pattern3/components/dev-project001.yaml
+++ b/demos/pattern3/components/dev-project001.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dev-env-project001
 spec:
   destination:
-    namespace: default
+    namespace: argocd
     server: https://kubernetes.default.svc
   project: dev-env-project
   source:
