--- a/demos/pattern3/argo-apps/dev-environment.yaml
+++ b/demos/pattern3/argo-apps/dev-environment.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: dev-env-app-of-apps
-  namespace: argocd
+  # namespace: argocd
 spec:
   destination:
     namespace: argocd
