--- a/demos/pattern3/argo-apps/dev-environment.yaml
+++ b/demos/pattern3/argo-apps/dev-environment.yaml
@@ -7,7 +7,7 @@ spec:
   destination:
     namespace: argocd
     server: https://kubernetes.default.svc
-  project: dev-env-project
+  project: default
   source:
     path: demos/pattern3/components/
     repoURL: https://github.com/saurav116/GitOps-Patterns
