--- a/demos/pattern3/argo-apps/dev-environment.yaml
+++ b/demos/pattern3/argo-apps/dev-environment.yaml
@@ -15,6 +15,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: false
+      selfHeal: true
     syncOptions:
       - CreateNamespace=true
