--- a/demos/pattern3/components/dev-project003.yaml
+++ b/demos/pattern3/components/dev-project003.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dev-env-project003
 spec:
   destination:
-    namespace: argocd
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   source:
