--- a/demos/pattern3/components/httpbin-app.yaml
+++ b/demos/pattern3/components/httpbin-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: dev-env-httpbin-app
 spec:
   destination:
-    namespace: argocd
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   source:
