--- a/demos/pattern4/argo-apps/prod-environment.yaml
+++ b/demos/pattern4/argo-apps/prod-environment.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: prod-env-appset
-  namespace: openshift-gitops
+  namespace: argocd
 spec:
   generators:
     - git:
