--- a/demos/pattern4/argo-apps/dev-environment.yaml
+++ b/demos/pattern4/argo-apps/dev-environment.yaml
@@ -15,7 +15,7 @@ spec:
     metadata:
       name: "{{path.basename}}"
     spec:
-      project: dev-env-appset-project
+      project: default
       syncPolicy:
         automated:
           prune: true
