--- a/demos/pattern4/argo-apps/dev-environment.yaml
+++ b/demos/pattern4/argo-apps/dev-environment.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: dev-env-appset
-  namespace: argocd
+  namespace: openshift-gitops
 spec:
   generators:
     - git:
